--- a/css/dark.css
+++ b/css/dark.css
@@ -7,20 +7,18 @@ body
 	margin: 45px 20px 200px 20px;
 	background-color: #222426;
 	color: #616363;
-	font-family: "HelveticaNeue";
 	font-size: 14px;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 a
 {
 	color: #838686;
-	font-family: "HelveticaNeue";
 	font-size: 14px;
 	text-decoration: none;
 }
 a:hover
 {
 	color: #1fb3ff;
-	font-family: "HelveticaNeue";
 	font-size: 14px;
 	text-decoration: underline;
 }
@@ -58,25 +56,21 @@ div#right_col
 .header_name
 {
 	color: #fff;
-	font-family: "HelveticaNeueLight";
 	font-size: 84px;
 }
 .large_title
 {
 	color: #1fb3ff;
-	font-family: "HelveticaNeueLight";
 	font-size: 36px;
 }
 .title
 {
 	color: #fff;
-	font-family: "HelveticaNeueBold";
 	font-size: 14px;
 }
 .subtitle
 {
 	color: #b8b8b8;
-	font-family: "HelveticaNeue";
 	font-size: 14px;
 }
 .subtitle a
@@ -86,14 +80,12 @@ div#right_col
 	-o-transition:all 0.35s ease;
 	transition:all 0.35s ease;
 	color: #b8b8b8;
-	font-family: "HelveticaNeue";
 	font-size: 14px;
 	text-decoration: none;
 }
 .subtitle a:hover
 {
 	color: #1fb3ff;
-	font-family: "HelveticaNeue";
 	font-size: 14px;
 	text-decoration: underline;
 }
