--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,4 +1,6 @@
 /* Fonts */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans&subset=latin);
+
 @font-face { font-family: 'BebasNeue';
 src: url('BebasNeue.eot');
 src: url('BebasNeue.woff') format('woff'), url('BebasNeue.ttf') format('truetype');}
